--- a/src/Gateway/ThingsGateway.Gateway.Razor/Locales/zh-CN.json
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Locales/zh-CN.json
@@ -1,5 +1,7 @@
 ﻿{
-
+  "ThingsGateway.Gateway.Razor.PluginPage": {
+    "Reload": "重载"
+  },
   "ThingsGateway.Gateway.Razor.TcpSessionClientDto": {
     "Id": "Id",
     "IP": "IP",
@@ -61,7 +63,7 @@
   },
   "ThingsGateway.Gateway.Razor.SavePlugin": {
     "SavePlugin": "注意：文件名称相同的插件将被覆盖",
-    "SavePlugin1": "插件变动需重启软件后生效"
+    "SavePlugin1": "插件变动可能需重启软件后生效"
   },
 
   "ThingsGateway.Gateway.Razor.BackendLogPage": {
