fix: 变量实时值偶发错误
feat: 优化内存占用

--- a/src/Admin/ThingsGateway.Razor/Locales/en-US.json
+++ b/src/Admin/ThingsGateway.Razor/Locales/en-US.json
@@ -23,6 +23,7 @@
     "False": "No",
     "Save": "Save",
     "Fail": "Fail {0}",
+    "Clear": "Clear",
     "Success": "Success",
     "PleaseSelect": "Please select the data",
     "TablesExportButtonExcelText": "Export Excel",
