feat: 添加注册服务

--- a/src/Admin/ThingsGateway.Razor/Locales/en-US.json
+++ b/src/Admin/ThingsGateway.Razor/Locales/en-US.json
@@ -52,7 +52,9 @@
   "ThingsGateway.Razor.About": {
     "Docs": "Docs",
     "Community": "Community",
-    "QQGroup": "QQGroup"
+    "QQGroup": "QQGroup",
+    "UUID": "UUID",
+    "RegisterStatus": "RegisterStatus"
   },
   "ThingsGateway.Razor.BlazorReconnector": {
     "Reconnecting1": "Reconnecting...",
